--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,17 @@ body {
 
 /* Header styles */  
 h1 {  
-  font-size: 18px;  
-  margin: 0;  
+  font-size: 25px;  
+  margin-bottom: 10px;  
   padding-bottom: 10px;  
+  text-align: center;
   border-bottom: 2px solid #007bff;  
   color: #007bff;  
 }  
+
+label{
+  font-size: 15px;
+}
 
 /* Textarea styles */  
 textarea {  
